--- a/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
+++ b/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
@@ -1,5 +1,5 @@
 <form>
-    <lista-paginada v-bind:exibir-inclusao="exibirValoresMonetarios" v-bind:linha-editando="numeroLinhaEdicao" v-bind:funcao-recuperar-itens="buscarItensVenda"
+    <lista-paginada v-bind:exibir-inclusao="permitirInserir" v-bind:linha-editando="numeroLinhaEdicao" v-bind:funcao-recuperar-itens="buscarItensVenda"
         v-bind:ordenacao="ordenacao" v-bind:filtro="filtro">
         <template slot="cabecalho">
             <th></th>
@@ -38,7 +38,7 @@
                     Tot. m² cálc.
                 </a>
             </th>
-            <th v-if="exibirValoresMonetarios">
+            <th>
                 <a href="#" v-on:click.prevent="ordenar('valorUnitario')">
                     Valor vendido
                 </a>
@@ -58,17 +58,17 @@
                     Ped. Cli.
                 </a>
             </th>
-            <th v-if="exibirValoresMonetarios">
+            <th>
                 <a href="#" v-on:click.prevent="ordenar('total')">
                     Total
                 </a>
             </th>
-            <th v-if="exibirValoresMonetarios">
+            <th>
                 <a href="#" v-on:click.prevent="ordenar('valorBeneficiamentos')">
                     V. Benef.
                 </a>
             </th>
-            <th v-if="exibirValoresMonetarios">
+            <th>
                 <a href="#" v-on:click.prevent="ordenar('percentualComissaoProduto')">
                     Perc. Comissão Prod.
                 </a>
@@ -110,7 +110,7 @@
             <td>
                 {{ item.areaEmM2.paraCalculo | decimal }}
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 {{ item.valorUnitario | moeda }}
             </td>
             <td>
@@ -126,13 +126,13 @@
             <td>
                 {{ item.codigoPedidoCliente }}
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 {{ item.total | moeda }}
                 <span v-if="item.descontoPorQuantidade && item.descontoPorQuantidade.percentual > 0">
                     (Desconto de {{ item.descontoPorQuantidade.percentual | percentual }})
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <span v-if="item.beneficiamentos">
                     {{ item.beneficiamentos.valor | moeda }}
                 </span>
@@ -140,7 +140,7 @@
                     {{ 0 | moeda }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 {{ item.percentualComissao | percentual }}
             </td>
             <slot name="item" v-bind:item="item" v-bind:index="index"></slot>
@@ -161,7 +161,7 @@
                         v-bind:filtro="{ idProdutoPai: item.id, item, controleAtualizacao }" v-bind:id-cliente="idCliente" v-bind:cliente-revenda="clienteRevenda" v-bind:tipo-entrega="tipoEntrega"
                         v-bind:percentual-comissao="percentualComissao" v-bind:dados-validacao-produto="dadosValidacaoProduto" v-bind:tipo-validacao-produto="tipoValidacaoProdutoInterno"
                         v-bind:quantidade-ambiente="quantidadeAmbiente" v-bind:obrigar-processo-e-aplicacao-roteiro="obrigarProcessoEAplicacaoRoteiro" v-bind:buscar-itens-venda="buscarFilhos"
-                        v-bind:editar="editar" v-bind:excluir="excluir" v-bind:atualizar="atualizar" v-bind:inserir="inserir" v-bind:exibir-valores-monetarios="false"
+                        v-bind:editar="editar" v-bind:excluir="excluir" v-bind:atualizar="atualizar" v-bind:inserir="inserir" v-bind:permitir-inserir="item.composicao.permitirInserirFilhos"
                         v-on:lista-atualizada="listaAtualizada">
                         <template slot="cabecalho">
                             <slot name="cabecalho"></slot>
@@ -239,7 +239,7 @@
                     {{ itemVenda.areaEmM2.paraCalculo | decimal }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <input type="number" step="0.01" min="produtoAtual ? produtoAtual.valorMinimo : 0" v-model.number="itemVenda.valorUnitario"
                     style="width: 50px" required>
             </td>
@@ -249,21 +249,21 @@
             <td class="lista-itens-venda__aplicacao">
                 <campo-busca-etiqueta-aplicacao v-bind:aplicacao.sync="aplicacaoAtual" v-if="itemVenda"></campo-busca-etiqueta-aplicacao>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <input type="number" v-model.number="itemVenda.valorUnitario" style="width: 60px" step="0.01" required
                     v-bind:min="produtoAtual.valorMinimo" v-if="itemVenda && produtoAtual && produtoAtual.podeEditarValorUnitario">
                 <span v-else-if="itemVenda">
                     {{ itemVenda.valorUnitario | moeda }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <campo-total v-bind:total.sync="itemVenda.total" v-bind:area-m2="itemVenda.areaEmM2.real" v-bind:area-calculada-m2="itemVenda.areaEmM2.paraCalculo"
                     v-bind:id-produto="itemVenda.produto.id" v-bind:id-cliente="idCliente" v-bind:altura="itemVenda.altura.paraCalculo" v-bind:largura="itemVenda.largura"
                     v-bind:quantidade="itemVenda.quantidade" v-bind:redondo="itemVenda.beneficiamentos.redondo" v-bind:espessura="itemVenda.produto.espessura" v-bind:calcular-multiplo-de-5="producaoCorte"
                     v-bind:numero-beneficiamentos-para-area-minima="numeroBeneficiamentosParaAreaMinima" v-bind:valor-unitario="itemVenda.valorUnitario" v-bind:tipo-validacao="tipoValidacaoProduto"
                     v-bind:dados-adicionais-validacao="dadosValidacaoProduto" v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-if="itemVenda && itemVenda.areaEmM2"></campo-total>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <span v-if="itemVenda.beneficiamentos">
                     {{ itemVenda.beneficiamentos.valor | moeda }}
                 </span>
@@ -271,7 +271,7 @@
                     {{ 0 | moeda }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <input type="number" step="0.01" v-model.number="itemVenda.percentualComissao" min="0" style="width: 50px" />
             </td>
             <slot name="itemEditando" v-bind:item="itemVenda"></slot>
@@ -296,11 +296,12 @@
                     </span>
                 </template>
                 <controle-beneficiamentos v-bind:itens-selecionados.sync="itemVenda.beneficiamentos.itens" v-bind:redondo.sync="itemVenda.beneficiamentos.redondo"
-                    v-bind:valor-beneficiamentos.sync="itemVenda.beneficiamentos.valor" v-bind:id-produto="produtoAtual.id" v-bind:espessura-produto="itemVenda.produto.espessura"
-                    v-bind:beneficiamentos-padrao="produtoAtual.beneficiamentos" v-bind:altura-produto="itemVenda.altura.paraCalculo" v-bind:largura-produto="itemVenda.largura"
-                    v-bind:quantidade-produto="itemVenda.quantidade" v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-bind:area-m2-produto="itemVenda.areaEmM2.real"
-                    v-bind:area-calculada-m2-produto="itemVenda.areaEmM2.paraCalculo" v-bind:valor-unitario-produto="itemVenda.valorUnitario" v-bind:custo-unitario-produto="produtoAtual.custo"
-                    v-bind:cliente-revenda="clienteRevenda" v-bind:percentual-desconto-acrescimo-cliente="(produtoAtual.descontoAcrescimoCliente || {}).percentual"
+                    v-bind:valor-beneficiamentos.sync="itemVenda.beneficiamentos.valor" v-bind:id-produto="produtoAtual.id" v-bind:id-subgrupo-produto="produtoAtual.idSubgrupo"
+                    v-bind:id-cor-produto="produtoAtual.idCor" v-bind:espessura-produto="itemVenda.produto.espessura" v-bind:beneficiamentos-padrao="produtoAtual.beneficiamentos"
+                    v-bind:altura-produto="itemVenda.altura.paraCalculo" v-bind:largura-produto="itemVenda.largura" v-bind:quantidade-produto="itemVenda.quantidade"
+                    v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-bind:area-m2-produto="itemVenda.areaEmM2.real" v-bind:area-calculada-m2-produto="itemVenda.areaEmM2.paraCalculo"
+                    v-bind:valor-unitario-produto="itemVenda.valorUnitario" v-bind:custo-unitario-produto="produtoAtual.custo" v-bind:cliente-revenda="clienteRevenda"
+                    v-bind:percentual-desconto-acrescimo-cliente="(produtoAtual.descontoAcrescimoCliente || {}).percentual"
                     v-bind:usar-desconto-acrescimo-cliente-nos-beneficiamentos="(produtoAtual.descontoAcrescimoCliente || {}).usarNosBeneficiamentos" v-bind:tipo-entrega="tipoEntrega || 0"
                     v-bind:percentual-comissao="percentualComissao || 0" v-bind:tipo-beneficiamentos="tipoBeneficiamentos"
                     v-if="vIfControleBeneficiamentos"></controle-beneficiamentos>
@@ -353,7 +354,7 @@
                     {{ itemVenda.areaEmM2.paraCalculo | decimal }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <input type="number" v-model.number="itemVenda.valorUnitario" style="width: 60px" step="0.01" required
                     v-bind:min="produtoAtual.valorMinimo" v-if="inserindo && itemVenda && produtoAtual && produtoAtual.podeEditarValorUnitario">
                 <span v-else-if="inserindo && itemVenda">
@@ -369,14 +370,14 @@
             <td>
                 <input type="text" v-model="itemVenda.codigoPedidoCliente" maxlength="50" style="width: 50px" v-if="inserindo && itemVenda">
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <campo-total v-bind:total.sync="itemVenda.total" v-bind:area-m2="itemVenda.areaEmM2.real" v-bind:area-calculada-m2="itemVenda.areaEmM2.paraCalculo"
                     v-bind:id-produto="itemVenda.produto.id" v-bind:id-cliente="idCliente" v-bind:altura="itemVenda.altura.paraCalculo" v-bind:largura="itemVenda.largura"
                     v-bind:quantidade="itemVenda.quantidade" v-bind:redondo="itemVenda.beneficiamentos.redondo" v-bind:espessura="itemVenda.produto.espessura" v-bind:calcular-multiplo-de-5="producaoCorte"
                     v-bind:numero-beneficiamentos-para-area-minima="numeroBeneficiamentosParaAreaMinima" v-bind:valor-unitario="itemVenda.valorUnitario" v-bind:tipo-validacao="tipoValidacaoProduto"
                     v-bind:dados-adicionais-validacao="dadosValidacaoProduto" v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-if="inserindo && itemVenda && itemVenda.areaEmM2"></campo-total>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <span v-if="inserindo && itemVenda.beneficiamentos">
                     {{ itemVenda.beneficiamentos.valor | moeda }}
                 </span>
@@ -384,7 +385,7 @@
                     {{ 0 | moeda }}
                 </span>
             </td>
-            <td v-if="exibirValoresMonetarios">
+            <td>
                 <input type="number" step="0.01" v-model.number="itemVenda.percentualComissao" min="0" style="width: 50px" v-if="inserindo && itemVenda" />
             </td>
             <slot name="itemIncluir" v-bind:item="itemVenda"></slot>
@@ -405,15 +406,16 @@
                         </select>
                         Esp.:
                         <input type="number" v-model.number="itemVenda.beneficiamentos.espessura"
-                               style="width: 40px" min="0" step="0.01" />
+                            style="width: 40px" min="0" step="0.01" />
                     </span>
                 </template>
                 <controle-beneficiamentos v-bind:itens-selecionados.sync="itemVenda.beneficiamentos.itens" v-bind:redondo.sync="itemVenda.beneficiamentos.redondo"
-                    v-bind:valor-beneficiamentos.sync="itemVenda.beneficiamentos.valor" v-bind:id-produto="produtoAtual.id" v-bind:espessura-produto="itemVenda.produto.espessura"
-                    v-bind:beneficiamentos-padrao="produtoAtual.beneficiamentos" v-bind:altura-produto="itemVenda.altura.paraCalculo" v-bind:largura-produto="itemVenda.largura"
-                    v-bind:quantidade-produto="itemVenda.quantidade" v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-bind:area-m2-produto="itemVenda.areaEmM2.real"
-                    v-bind:area-calculada-m2-produto="itemVenda.areaEmM2.paraCalculo" v-bind:valor-unitario-produto="itemVenda.valorUnitario" v-bind:custo-unitario-produto="produtoAtual.custo"
-                    v-bind:cliente-revenda="clienteRevenda" v-bind:percentual-desconto-acrescimo-cliente="(produtoAtual.descontoAcrescimoCliente || {}).percentual"
+                    v-bind:valor-beneficiamentos.sync="itemVenda.beneficiamentos.valor" v-bind:id-produto="produtoAtual.id" v-bind:id-subgrupo-produto="produtoAtual.idSubgrupo"
+                    v-bind:id-cor-produto="produtoAtual.idCor" v-bind:espessura-produto="itemVenda.produto.espessura" v-bind:beneficiamentos-padrao="produtoAtual.beneficiamentos"
+                    v-bind:altura-produto="itemVenda.altura.paraCalculo" v-bind:largura-produto="itemVenda.largura" v-bind:quantidade-produto="itemVenda.quantidade"
+                    v-bind:quantidade-ambiente="quantidadeAmbiente || 0" v-bind:area-m2-produto="itemVenda.areaEmM2.real" v-bind:area-calculada-m2-produto="itemVenda.areaEmM2.paraCalculo"
+                    v-bind:valor-unitario-produto="itemVenda.valorUnitario" v-bind:custo-unitario-produto="produtoAtual.custo" v-bind:cliente-revenda="clienteRevenda"
+                    v-bind:percentual-desconto-acrescimo-cliente="(produtoAtual.descontoAcrescimoCliente || {}).percentual"
                     v-bind:usar-desconto-acrescimo-cliente-nos-beneficiamentos="(produtoAtual.descontoAcrescimoCliente || {}).usarNosBeneficiamentos" v-bind:tipo-entrega="tipoEntrega || 0"
                     v-bind:percentual-comissao="percentualComissao || 0" v-bind:tipo-beneficiamentos="tipoBeneficiamentos"
                     v-if="inserindo && vIfControleBeneficiamentos"></controle-beneficiamentos>
