--- a/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
+++ b/Glass/Vue/_Compartilhado/Templates/ListaItensVenda.html
@@ -145,7 +145,7 @@
             </td>
             <slot name="item" v-bind:item="item" v-bind:index="index"></slot>
             <td style="white-space: nowrap">
-                <button v-bind:title="(exibindoFilhos(index) ? 'Esconder' : 'Exibir') + ' Produtos da Composição'" v-if="item.possuiFilhos && !inserindo && numeroLinhaEdicao === -1"
+                <button v-bind:title="(exibindoFilhos(index) ? 'Esconder' : 'Exibir') + ' Produtos da Composição'" v-if="item.composicao.possuiFilhos && !inserindo && numeroLinhaEdicao === -1"
                     v-on:click.prevent="alternarExibicaoFilhos(index)">
                     <img src="../Images/box.png">
                 </button>
@@ -153,7 +153,7 @@
             </td>
         </template>
         <template slot="novaLinhaItem" slot-scope="{ item, index, classe }"
-            v-if="item.possuiFilhos && !inserindo && numeroLinhaEdicao === -1 && exibindoFilhos(index)">
+            v-if="item.composicao.possuiFilhos && !inserindo && numeroLinhaEdicao === -1 && exibindoFilhos(index)">
             <tr v-bind:class="classe" style="border-top: none">
                 <td></td>
                 <td v-bind:colspan="numeroColunasLista - 1">
