--- a/Glass/Vue/_Compartilhado/Templates/CampoQuantidade.html
+++ b/Glass/Vue/_Compartilhado/Templates/CampoQuantidade.html
@@ -1,6 +1,7 @@
-<span v-on:focus.prevent="exibirDescontoPorQuantidade_ = true" v-on:blur.prevent="exibirDescontoPorQuantidade_ = false">
+<span>
     <input type="number" v-bind:step="incremento" v-bind:min="incremento" v-model.number="quantidadeAtual" style="width: 50px" required>
     <campo-desconto-quantidade v-bind:percentual.sync="percentualDescontoPorQuantidadeAtual" v-bind:valor.sync="valorDescontoPorQuantidadeAtual"
         v-bind:id-produto="idProduto" v-bind:id-cliente="idCliente" v-bind:exibir="exibirDescontoPorQuantidade && exibirDescontoPorQuantidade_"
+        v-bind:percentual-maximo="percentualDescontoPorQuantidadeMaximo" v-bind:percentual-tabela="percentualDescontoTabela"
         v-if="idProduto"></campo-desconto-quantidade>
 </span>
